--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,3 +1,9 @@
-<h1>Welcome to Django App</h1>
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
+<h1> {{title}} </h1>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque necessitatibus numquam adipisci inventore amet ea soluta harum delectus molestiae aperiam dicta asperiores aliquam sequi iusto consectetur, iure reprehenderit consequuntur sunt. Voluptatem ex nostrum, molestiae architecto quam magni impedit nesciunt ducimus voluptas dolorem placeat assumenda dolores quis itaque aut ratione a.</p>
+
+{% endblock %}
