--- a/myapp/templates/task.html
+++ b/myapp/templates/task.html
@@ -1,1 +1,19 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
 <h1>Tasks</h1>
+
+{% for task in tasks %}
+
+<div>
+    <h1> {% if task.done == False %} &#x23F2 {% else %} &#x2713 {% endif %} {{task.title}}</h1>
+    <p>{{task.description}}</p>
+    <p>Project: {{task.project}}</p>
+    <button>
+        Delete
+    </button>
+</div>
+
+{%endfor%}
+
+{% endblock %}
