commit de prueba
Se modificó desde github y se busca jalar los cambios al repo local.

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-
+<!-- comentario prueba -->
 <h1> {{title}} </h1>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque necessitatibus numquam adipisci inventore amet ea soluta harum delectus molestiae aperiam dicta asperiores aliquam sequi iusto consectetur, iure reprehenderit consequuntur sunt. Voluptatem ex nostrum, molestiae architecto quam magni impedit nesciunt ducimus voluptas dolorem placeat assumenda dolores quis itaque aut ratione a.</p>
