Other commit test
Commit de prueba para el fucinamiento del git pull

--- a/myapp/templates/about.html
+++ b/myapp/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-
+<!-- Otro commit de prueba para la clase -->
 <h1>About</h1>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos voluptas, doloremque mollitia nesciunt laudantium, exercitationem nulla quaerat ad velit ducimus ea consectetur numquam iusto debitis temporibus itaque alias quidem neque illum sunt! Nam quae expedita voluptatem? Natus nulla placeat dignissimos deleniti consequuntur quis facere inventore labore veniam eligendi perspiciatis illo nobis incidunt, accusantium hic commodi aspernatur officiis eaque! Aliquam quod tenetur quia natus id laborum iusto eveniet! Maiores doloremque deleniti cumque aliquam. Molestias enim neque corporis magni, iste modi quibusdam adipisci, accusantium nemo magnam fugit doloribus illum accusamus. At consequatur ut aliquam similique soluta, velit esse earum ullam perferendis. Sed!</p>
